--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -18,7 +18,7 @@
 
   <div class="field">
     <%= form.label :birthdate %>
-    <%= form.text_field :birthdate, id: :student_birthdate %>
+    <%= form.date_select :birthdate, id: :student_birthdate %>
   </div>
 
   <div class="field">
